--- a/src/main/resources/webroot/index.html
+++ b/src/main/resources/webroot/index.html
@@ -110,12 +110,17 @@
 var getUrl = window.location;
 var baseUrl = getUrl .protocol + "//" + getUrl.host + "/"
 
-addGenreRow('#recPage', 'Action', 'action-collection', 8, baseUrl);
-addGenreRow('#recPage', 'Romance', 'romance-collection', 8, baseUrl);
-addGenreRow('#recPage', 'Thriller', 'thriller-collection', 8, baseUrl);
-addGenreRow('#recPage', 'Comedy', 'comedy-collection', 8, baseUrl);
-addGenreRow('#recPage', 'Drama', 'drama-collection', 8, baseUrl);
+// addGenreRow('#recPage', 'Action', 'action-collection', 8, baseUrl);
+// addGenreRow('#recPage', 'Romance', 'romance-collection', 8, baseUrl);
+// addGenreRow('#recPage', 'Thriller', 'thriller-collection', 8, baseUrl);
+// addGenreRow('#recPage', 'Comedy', 'comedy-collection', 8, baseUrl);
+// addGenreRow('#recPage', 'Drama', 'drama-collection', 8, baseUrl);
 addGenreRow('#recPage', 'Adventure', 'adventure-collection', 8, baseUrl);
-
+addGenreRowByPopularitySort('#recPage', 'Action', 'action-collection', 8, baseUrl);
+addGenreRowByPopularitySort('#recPage', 'Romance', 'romance-collection', 8, baseUrl);
+addGenreRowByPopularitySort('#recPage', 'Thriller', 'thriller-collection', 8, baseUrl);
+addGenreRowByPopularitySort('#recPage', 'Comedy', 'comedy-collection', 8, baseUrl);
+addGenreRowByPopularitySort('#recPage', 'Drama', 'drama-collection', 8, baseUrl);
+addGenreRowByPopularitySort('#recPage', 'Adventure', 'adventure-collection', 8, baseUrl);
 </script>
 </html>
